fixed: font size too small and panel text unreadable on some themes (Atom Dark)

--- a/styles/debug.less
+++ b/styles/debug.less
@@ -182,8 +182,8 @@ atom-text-editor::shadow {
 
 	code {
 		font-family: Menlo, Consolas, 'DejaVu Sans Mono', monospace;
-		font-size: 1em;
-		color: @syntax-text-color;
+		font-size: max(@font-size, 12px);
+		color: contrast(@inset-panel-background-color, @syntax-text-color);
 		background: transparent;
 		.identifier {
 			// color: @syntax-color-variable;
